Latest submission after adding open sourse

--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
         </div>
         <br/>
         <br/>
-        
-
         <div class="container text-center">
           <div class="row justify-content-start">
             <div class="col">
@@ -90,9 +88,15 @@
               <p class="signs">🌧️</p>
               <p class="text">24°/16°</p>
             </div>
+<br/>
+            <div class="container under-Sign">
+          <div class="row justify-content-start">
+            <div class="col">
+        <div class="Undersign" id="under-Sign">created by Josephine Jacobs,
+          <a href="https://github.com/JosephineJacobs/WeatherApp-JJ"> Open-Source code</a></div>
         </div>
       </div>
     </div>
     <script src="src/index.js"></script>
-  </body>
+
 </html>
